# event-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  build-docker.sh  pyproject.toml  run.sh
aws/: README.md
aws/logging/: ecs-td-event-generator.json  env  lambda.py  lipsum-10kb.txt  lipsum-1kb.txt  lipsum-4kb.txt  s3-policy.json
src/: generator.py
